# polypoker

./: .gitignore  .gitlab-ci.yml  API.md  Makefile  README.md  docker-compose.yml  pom.xml
backend/: Dockerfile  pyproject.toml
backend/PokerTest/: pom.xml
backend/PokerTest/src/main/java/com/example/pokertest/: AuthAnswer.java  AuthMessage.java  MainController.java  PokerTestApplication.java  RegMessage.java  TextMessage.java  WebSocketConfig.java
backend/PokerTest/src/main/resources/static/: app.js
backend/PolyPokerServer/: Dockerfile  build.gradle  docker-compose.yml  settings.gradle
backend/PolyPokerServer/src/main/java/com/beathuntercode/polypokerserver/: PolyPokerServerApplication.java
backend/PolyPokerServer/src/main/java/com/beathuntercode/polypokerserver/controller/: UserController.java  UserStatisticController.java
backend/PolyPokerServer/src/main/java/com/beathuntercode/polypokerserver/logic/: Card.java  CardNumber.java  CardSuit.java  GameManager.java  GameState.java  HAND_RANK.java  HandRank.java  Player.java  RANK.java  Rank.java  Room.java  RoomsController.java  SUIT.java  Suit.java  Utilities.java
backend/PolyPokerServer/src/main/java/com/beathuntercode/polypokerserver/model/: User.java  UserDao.java  UserRepository.java
backend/PolyPokerServer/src/main/resources/: application.properties
backend/PolyPokerServer/src/test/java/com/beathuntercode/polypokerserver/: PolyPokerServerApplicationTests.java
backend/app/: main.py
backend/app/api/: __init__.py
backend/app/core/: config.py
database/: README.md  polypokerdb.sql
(+194 files in other folders)
