[tool.poetry]
name = "polypoker"
version = "0.1.0"
description = ""
authors = ["V4SRandiSPB <ivan@v4scale.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.85.1"
uvicorn = "^0.19.0"

[tool.poetry.dev-dependencies]
pylint = "^2.15.5"
mypy = "^0.982"
isort = "^5.10.1"
black = "^22.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
